--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -56,7 +56,7 @@
 
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etEmail"
+            android:id="@+id/input_email_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:digits="-1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@."
@@ -84,7 +84,7 @@
 
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etPassword"
+            android:id="@+id/input_password_Et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
@@ -93,7 +93,7 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/inputPasswordEt"
+        android:id="@+id/input_password_again"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -110,7 +110,7 @@
 
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etRepeatPassword"
+            android:id="@+id/input_password_again_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
@@ -126,7 +126,7 @@
         android:text="@string/register_btn_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputPasswordEt" />
+        app:layout_constraintTop_toBottomOf="@+id/input_password_again" />
 
 
     <ImageButton
