> final commit (last one was not 99% xD)

--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -45,6 +45,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/scada"
             android:text="cloudy"
+            android:gravity="center"
+            android:foregroundGravity="center"
             android:textColor="@color/black"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
