--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/scada_bold"
                 android:gravity="center"
-                android:text="+20"
+                android:text="20"
                 android:textColor="@color/black"
                 android:textSize="90sp"
                 app:layout_constraintBottom_toBottomOf="parent"
